fix: unify spacing between login components

--- a/src/content.landing.css
+++ b/src/content.landing.css
@@ -674,7 +674,7 @@ html[data-ccxp-lite-scope="landing"] [size="2" i] {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  margin-block: 12px;
+  margin-top: 12px;
 }
 
 .ccxp-lite-landing-login .ccxp-lite-login-action-group > .ccxp-lite-image-action-button,
